# blender_maxwell

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  ;  CHANGELOG.md  FUTURE.md  LICENSE_header.txt  README.md  TODO.md  pyproject.toml  run.py  run.sh  test.py
blender_maxwell/: __init__.py  preferences.py  requirements.txt
blender_maxwell/node_trees/: __init__.py
blender_maxwell/node_trees/maxwell_sim_nodes/: __init__.py  bl_socket_map.py  categories.py  constants.py  contracts.py  node_tree.py  socket_types.py  tree.py  types.py
blender_maxwell/node_trees/maxwell_sim_nodes/contracts/: __init__.py  bl.py  data_flows.py  node_cat_labels.py  node_cats.py  node_types.py  socket_bl_maps.py  socket_colors.py  socket_shapes.py  socket_types.py  socket_units.py  trees.py
blender_maxwell/node_trees/maxwell_sim_nodes/contracts/schemas/: managed_obj.py  managed_obj_def.py  node.py  socket_def.py
blender_maxwell/node_trees/maxwell_sim_nodes/managed_objs/: managed_bl_image.py  managed_bl_object.py
blender_maxwell/node_trees/maxwell_sim_nodes/nodes/: __init__.py  base.py  categories.py  constants.py  kitchen_sink.py  node_base.py  types.py
blender_maxwell/node_trees/maxwell_sim_nodes/nodes/bounds/: bound_box.py
blender_maxwell/node_trees/maxwell_sim_nodes/nodes/definitions/: __init__.py  bounds.py  debug.py  mediums.py  simulations.py  sources.py  structures.py
blender_maxwell/node_trees/maxwell_sim_nodes/nodes/inputs/: __init__.py  unit_system.py  wave_constant.py
blender_maxwell/node_trees/maxwell_sim_nodes/nodes/mediums/: __init__.py  library_medium.py
blender_maxwell/node_trees/maxwell_sim_nodes/nodes/monitors/: __init__.py  eh_field_monitor.py  field_power_flux_monitor.py
blender_maxwell/node_trees/maxwell_sim_nodes/nodes/outputs/: __init__.py  viewer.py
blender_maxwell/node_trees/maxwell_sim_nodes/nodes/simulations/: __init__.py  fdtd_sim.py  fdtd_simulation.py  sim_domain.py
blender_maxwell/node_trees/maxwell_sim_nodes/nodes/sources/: __init__.py  plane_wave_source.py  point_dipole_source.py
blender_maxwell/node_trees/maxwell_sim_nodes/nodes/structures/: __init__.py  geonodes_structure.py  object_structure.py
blender_maxwell/node_trees/maxwell_sim_nodes/nodes/utilities/: __init__.py  combine.py  separate.py
blender_maxwell/node_trees/maxwell_sim_nodes/nodes/viz/: __init__.py
blender_maxwell/node_trees/maxwell_sim_nodes/sockets/: __init__.py  base.py
blender_maxwell/node_trees/maxwell_sim_nodes/sockets/basic/: __init__.py  any_socket.py  bool.py  bool_socket.py  file_path.py  file_path_socket.py  string.py  text_socket.py
blender_maxwell/node_trees/maxwell_sim_nodes/sockets/blender/: __init__.py  collection_socket.py  geonodes.py  geonodes_socket.py  image_socket.py  object_socket.py  target_socket.py  text.py  text_socket.py  volume_socket.py
blender_maxwell/node_trees/maxwell_sim_nodes/sockets/maxwell/: __init__.py  bound_box_socket.py  bound_cond.py  bound_face_socket.py  fdtd_sim.py  fdtd_sim_socket.py  maxwell_bound_socket.py  maxwell_fdtd_sim_socket.py  maxwell_medium_socket.py  maxwell_source_socket.py  maxwell_structure_socket.py  medium_non_linearity_socket.py  medium_socket.py  monitor.py  monitor_socket.py  sim_domain_socket.py  sim_grid.py  sim_grid_axis_socket.py  sim_grid_socket.py  source.py  source_socket.py  structure.py  structure_socket.py  temporal_shape_socket.py
blender_maxwell/node_trees/maxwell_sim_nodes/sockets/number/: __init__.py  complex_number.py  (+5 more)
blender_maxwell/operators/: __init__.py  connect_viewer.py  install_deps.py  refresh_td_auth.py  types.py  uninstall_deps.py
blender_maxwell/utils/: analyze_geonodes.py  auth_td_web.py  blender_type_enum.py  extra_sympy_units.py  pydantic_sympy.py  tdcloud.py
doc/: .gitignore  _quarto.yml  index.qmd
scripts/: bl_run.py  info.py  pack.py  run.py
src/blender_maxwell/: __init__.py  contracts.py  info.py  preferences.py  registration.py  requirements.txt
src/blender_maxwell/assets/: __init__.py  assets.blend  blender_assets.cats.txt  geonodes.py  import_geonodes.py
src/blender_maxwell/assets/examples/: sio_waveguide.blend
src/blender_maxwell/assets/structures/: template.blend
src/blender_maxwell/blends/: starter.blend
src/blender_maxwell/contracts/: __init__.py  addon.py  bl.py  bl_types.py  operator_types.py  panel_types.py
src/blender_maxwell/node_trees/: __init__.py
src/blender_maxwell/node_trees/maxwell_sim_nodes/: __init__.py  bl_cache.py  bl_socket_map.py  categories.py  node_tree.py
src/blender_maxwell/nodeps/: __init__.py
src/blender_maxwell/nodeps/operators/: __init__.py  install_deps.py  manage_pydeps.py  popup_install_deps.py  uninstall_deps.py
src/blender_maxwell/nodeps/utils/: __init__.py  blender_type_enum.py  pip_process.py  pydeps.py  simple_logger.py
src/blender_maxwell/operators/: __init__.py  bl_append.py  connect_viewer.py  install_deps.py  types.py
src/blender_maxwell/operators_nodeps/: __init__.py  install_deps.py  uninstall_deps.py
src/blender_maxwell/services/: __init__.py  tdcloud.py
src/blender_maxwell/utils/: __init__.py  analyze_geonodes.py  bl_cache.py  bl_instance.py  blender_type_enum.py  extra_sympy_units.py  frozendict.py  image_ops.py  jarray.py  jaxarray.py  keyed_cache.py  logger.py  lru_method.py  pydantic_sympy.py  pydeps.py  sci_constants.py  serialize.py  sim_symbols.py  staticproperty.py  tdcloud.py
src/blender_maxwell/utils/bl_cache/: __init__.py  bl_field.py  bl_prop.py  bl_prop_type.py  cached_bl_property.py  keyed_cache.py  managed_cache.py  signal.py
src/blender_maxwell/utils/sim_symbols/: __init__.py  common.py  name.py  sim_symbol.py  utils.py
src/blender_maxwell/utils/sympy_extra/: __init__.py  math_type.py  number_size.py  parse_cast.py  physical_type.py  sympy_expr.py  sympy_sets.py  sympy_type.py  unit_analysis.py  unit_system_analysis.py  unit_systems.py  units.py
src/ienv/: ienv.py  main.py
src/ienv/addons/addon_1/: __init__.py
src/ienv/addons/addon_2/: __init__.py
src/scripts/: bl_delete_addon.py  bl_install_addon.py  bl_run.py  dev.py  info.py  pack.py
(+306 files in other folders)
